--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,11 @@ Index styles.
  */
 
 :root {
-	--ff-primary: system-ui, sans-serif;
+	--ff-primary: Inter, sans-serif;
+
+	--clr-dark: hsl(218, 23%, 23%);
+	--clr-light: hsl(231 77% 90%);
+	--clr-white: hsl(0, 0%, 100%);
 
 	--clr-primary-400: hsl(80, 3%, 19%);
 
@@ -15,13 +19,12 @@ Index styles.
 	--fs-800: 2.25rem;
 
 	--fs-body: var(--fs-400);
-	--fs-nav: var(--fs-500);
+	--fs-nav: var(--fs-300);
 }
 
 @media (min-width: 50em) {
 	:root {
 		--fs-body: var(--fs-500);
-		--fs-nav: var(--fs-300);
 	}
 }
 
@@ -44,8 +47,9 @@ html:focus-within {
 body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
+	font-family: var(--ff-primary);
 	font-size: var(--fs-body);
-	color: var(--clr-primary-400);
+	color: var(--clr-dark);
 }
 
 h1,
@@ -149,6 +153,7 @@ Sitewide Classes
 	justify-content: center;
 	align-items: center;
 	padding-block: 0.5rem;
+	font-size: var(--fs-nav);
 }
 
 .primary-navigation {
@@ -159,12 +164,15 @@ Sitewide Classes
 .nav-list {
 	gap: 0.95rem;
 	margin-right: 0.75rem;
+	font-size: var(--fs-nav);
+	font-weight: bold;
 }
 
 .nav-list li > a {
 	cursor: pointer;
 	text-decoration: none;
-	color: hsl(0, 0%, 0%);
+	color: hsl(0, 0%, 31%);
+
 }
 
 .nav-list li > a:hover {
