--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,8 @@ Index styles.
 
 	--clr-primary-400: hsl(80, 3%, 19%);
 
+	--bg-clr-white: hsl(0, 0%, 100%);
+
 	--fs-300: 0.8125rem;
 	--fs-400: 0.875rem;
 	--fs-500: 0.9375rem;
@@ -20,6 +22,8 @@ Index styles.
 
 	--fs-body: var(--fs-400);
 	--fs-nav: var(--fs-300);
+
+	--bg-clr-body: var(--bg-clr-white);
 }
 
 @media (min-width: 50em) {
@@ -50,6 +54,7 @@ body {
 	font-family: var(--ff-primary);
 	font-size: var(--fs-body);
 	color: var(--clr-dark);
+	background-color: var(--bg-clr-body);
 }
 
 h1,
@@ -156,51 +161,6 @@ Sitewide Classes
 	font-size: var(--fs-nav);
 }
 
-.primary-navigation {
-	justify-content: space-between;
-	align-items: center;
-}
-
-.nav-list {
-	gap: 0.95rem;
-	margin-right: 0.75rem;
-	font-size: var(--fs-nav);
-	font-weight: bold;
-}
-
-.nav-list li > a {
-	cursor: pointer;
-	text-decoration: none;
-	color: hsl(0, 0%, 31%);
-
-}
-
-.nav-list li > a:hover {
-	border-bottom: 4px solid hsl(344, 97%, 65%);
-}
-
-.logo-circle {
-	--size: 3rem;
-	width: var(--size);
-	height: var(--size);
-	border: 4px solid hsl(0, 0%, 87%);
-	border-radius: 50%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	margin-left: 0.75rem;
-}
-
-.logo-text {
-	font-style: italic;
-	border-bottom: 1px solid hsl(0, 0%, 0%);
-}
-
-.logo-text > a {
-	text-decoration: none;
-	color: hsl(0, 0%, 0%);
-}
-
 .copyright {
 
 }
@@ -253,6 +213,7 @@ Sitewide Classes
 .social-links-list a {
 	text-decoration: none;
 	color: rgba(0, 0, 0, 0.72);
+	font-weight: 600;
 }
 
 .table-of-contents-list {
@@ -266,9 +227,118 @@ Sitewide Classes
 	color: hsl(240, 100%, 40%);
 }
 
-/******
-Utility Classes
- */
+/**********************
+* Navigation Attributes
+ **********************/
+.primary-navigation {
+	justify-content: space-between;
+	align-items: center;
+}
+
+.logo-circle {
+	--size: 3rem;
+	width: var(--size);
+	height: var(--size);
+	border: 4px solid hsl(0, 0%, 87%);
+	border-radius: 50%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-left: 0.75rem;
+}
+
+.logo-text {
+	font-style: italic;
+	border-bottom: 1px solid hsl(0, 0%, 0%);
+}
+
+.logo-text > a {
+	text-decoration: none;
+	color: hsl(0, 0%, 0%);
+}
+
+.nav-list-wrapper {
+	display: block;
+}
+
+.nav-list {
+	display: flex;
+	gap: 0.95rem;
+	margin-right: 0.75rem;
+	font-size: var(--fs-nav);
+	font-weight: bold;
+}
+
+.nav-list li > a {
+	cursor: pointer;
+	text-decoration: none;
+	color: hsl(0, 0%, 31%);
+}
+
+.nav-list li > a:hover {
+	border-bottom: 4px solid hsl(344, 97%, 65%);
+}
+
+.mobile-nav-list-wrapper {
+	display: none;
+}
+
+@media screen and (max-width: 768px) {
+	.hamburger {
+		cursor: pointer;
+		margin-right: 12px;
+	}
+	.hamburger div {
+		width: 24px;
+		height: 4px;
+		margin: 6px;
+		background-color: hsl(0, 0%, 0%);
+	}
+	.nav-list-wrapper {
+		display: none;
+	}
+	.mobile-nav-list-wrapper {
+		display: block;
+	}
+	.mobile-nav-list-hidden {
+		display: none;
+	}
+	.mobile-nav-list-expanded {
+		display: block;
+	}
+	.mobile-nav-list {
+		display: flex;
+		flex-direction: column;
+		gap: 1rem;
+		position: absolute;
+		top: 58px;
+		left: 0;
+		box-shadow: 0 0 2em rgba(0,0,0,.1);
+		width: 100%;
+		background-color: hsl(0, 0%, 96%);
+		transition: transform 0.3s ease-in-out;
+	}
+	.mobile-nav-list li {
+		text-align: center;
+		padding: 4px;
+		margin-top: 8px;
+		margin-bottom: 8px;
+	}
+	.mobile-nav-list li > a {
+		text-decoration: none;
+		font-size: var(--fs-400);
+		font-weight: bold;
+		color: var(--clr-primary-400);
+		width: 100%;
+	}
+	.primary-navigation {
+		position: relative;
+	}
+}
+
+/**********************
+* Utility Classes
+ **********************/
 .general-container {
 	--max-width: 1110px;
 	--padding: 1rem;
@@ -279,6 +349,11 @@ Utility Classes
 
 .flex {
 	display: flex;
+}
+
+.grid-pc-center {
+	display: grid;
+	place-content: center;
 }
 
 .list-style-type-none {
@@ -307,4 +382,14 @@ Utility Classes
 
 .no-resize {
 	resize: none;
+}
+
+/******
+Mobile Responsiveness.
+ */
+@media screen and (max-width: 640px) {
+	.primary-footer {
+		flex-direction: column;
+		gap: 5px;
+	}
 }
